// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agentTransferMenuPreferenceMenuReducer SET_AGENTS_TRANSFER_MENU_PREFERENCE changes agentsTransferMenu preference 1`] = `
Immutable.Map {
  "agentsTransferMenu": true,
}
`;

exports[`agentTransferMenuPreferenceMenuReducer SET_SHOW_QUEUES_TRANSFER_MENU_PREFERENCE opens queues dropdown 1`] = `
Immutable.Map {
  "showQueues": true,
}
`;

exports[`agentTransferMenuPreferenceMenuReducer SET_SHOW_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE opens transfer list dropdown 1`] = `
Immutable.Map {
  "showTransferLists": true,
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_ALL_SELECTED_QUEUES_TRANSFER_MENU_PREFERENCE toggle all queues to selected 1`] = `
Immutable.Map {
  "queuesVisibleStateMap": Immutable.Map {
    "123": false,
    "abc": false,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_ALL_SELECTED_QUEUES_TRANSFER_MENU_PREFERENCE toggle all queues to unselected 1`] = `
Immutable.Map {
  "queuesVisibleStateMap": Immutable.Map {
    "123": true,
    "abc": true,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_ALL_SELECTED_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE toggle all transfer lists to selected 1`] = `
Immutable.Map {
  "transferListsVisibleStateMap": Immutable.Map {
    "123": false,
    "abc": false,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_ALL_SELECTED_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE toggle all transfer lists to unselected 1`] = `
Immutable.Map {
  "transferListsVisibleStateMap": Immutable.Map {
    "123": true,
    "abc": true,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_SELECTED_QUEUE_TRANSFER_MENU_PREFERENCE toggle one queue and unselect it 1`] = `
Immutable.Map {
  "queuesVisibleStateMap": Immutable.Map {
    "123": true,
    "abc": true,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_SELECTED_QUEUE_TRANSFER_MENU_PREFERENCE toggle one queue to selected 1`] = `
Immutable.Map {
  "queuesVisibleStateMap": Immutable.Map {
    "123": false,
    "abc": true,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_SELECTED_QUEUES_TRANSFER_MENU_PREFERENCE toggle all stored queues to state 1`] = `
Immutable.Map {
  "queuesVisibleStateMap": Immutable.Map {
    "123": true,
    "abc": true,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_SELECTED_TRANSFER_LIST_TRANSFER_MENU_PREFERENCE toggle one transfer list and unselect it 1`] = `
Immutable.Map {
  "transferListsVisibleStateMap": Immutable.Map {
    "123": true,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_SELECTED_TRANSFER_LIST_TRANSFER_MENU_PREFERENCE toggle one transfer list to selected list 1`] = `
Immutable.Map {
  "transferListsVisibleStateMap": Immutable.Map {
    "123": false,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer TOGGLE_SELECTED_TRANSFER_LISTS_TRANSFER_MENU_PREFERENCE toggle all stored transfer lists to state 1`] = `
Immutable.Map {
  "transferListsVisibleStateMap": Immutable.Map {
    "123": true,
    "abc": false,
  },
}
`;

exports[`agentTransferMenuPreferenceMenuReducer returns the correct initial state 1`] = `
Immutable.Map {
  "agentsTransferMenu": true,
  "showQueues": false,
  "showTransferLists": false,
  "preferenceMenuQueuesLoading": false,
  "preferenceMenuTransferListsLoading": false,
  "transferListsVisibleStateMap": Immutable.Map {},
  "queuesVisibleStateMap": Immutable.Map {},
}
`;
